[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-topic-classification"
version = "0.1.0"
description = "Indonesian news topic classification with optional clustering utilities."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "pandas>=2.0",
  "numpy>=1.23",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "optuna>=3.6",
  "regex>=2023.10.3",

  # to use HF
  "datasets>=2.18",
  "huggingface-hub>=0.20",

  # load for bundler
  "joblib>=1.3"
]

[project.optional-dependencies]
clustering = [
  "torch>=2.1",
  "sentence-transformers>=3.0",
  "bertopic>=0.16",
  "hdbscan>=0.8.33",
  "umap-learn>=0.5.5",
]

dev = [
  "ipykernel",
  "jupyter",
  "black",
  "ruff",
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]